auth-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  namespace: intelligtest-namespace
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app/component: auth-service
  template:
    metadata:
      name: auth-service-pod
      labels:
        app/name: auth-service-pod
        app/component: auth-service
    spec:
      containers:
        - name: auth-service-container
          image: zaragozasebastian/auth-service-intelligtest:1
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
          ports:
            - containerPort: 4001
