auth-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: intelligtest-namespace
spec:
  selector:
    app/component: auth-service
  ports:
    - port: 4001
      targetPort: 4001
  type: ClusterIP
